--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "nexmo/client",
+  "name": "andrejsjakovlevs/nexmo-php-complete",
   "description": "PHP Client for using Nexmo's API.",
   "license": "MIT",
   "type": "library",
@@ -30,8 +30,8 @@
     "email": "devrel@nexmo.com"
   },
   "require": {
-    "php": ">=7.2",
+    "php": ">=8.0",
     "guzzlehttp/guzzle": "^7.0",
-    "nexmo/client-core": "^2.0"
+    "andrejsjakovlevs/nexmo-php": "^2.0"
   }
 }
